<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DashBoardFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dashboard_name_text_view"
            android:text="@string/dashboard_fragment"
            android:textSize="30sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hello_text_view"
            android:text="@string/hello_dear"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/dashboard_name_text_view"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingHorizontal="10dp"
            android:text="@string/empty_string"
            android:textColorHint="@color/teal_light_dark"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/hello_text_view"
            app:layout_constraintTop_toBottomOf="@id/hello_text_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_out_next_btn"
            android:text="@string/move_to_log_out"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toTopOf="@id/guideline_mid"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>