<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LogOutFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_out_text_view"
            android:text="@string/log_out_fragment"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previous_fragment_btn"
            android:text="@string/previous"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toTopOf="@id/guideline_mid"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/log_out_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_out_btn"
            android:text="@string/log_out"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toTopOf="@id/guideline_mid"
            app:layout_constraintStart_toEndOf="@id/previous_fragment_btn"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>